--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -16,12 +16,18 @@
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^8.1.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.508.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
@@ -37,7 +43,7 @@
     "globals": "^16.0.0",
     "path": "^0.12.7",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.3.1"
   }
 }
