--- a/project-step-1-the-soacerers/pom.xml
+++ b/project-step-1-the-soacerers/pom.xml
@@ -52,7 +52,11 @@
       <artifactId>mysql-connector-j</artifactId>
       <version>8.0.33</version>
     </dependency>
-
+<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.2</version>
+</dependency>
     <!-- Security & JWT -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
