--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -20,7 +20,9 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
+    "lms-frontend": "file:",
     "lucide-react": "^0.508.0",
+    "mysql2": "^3.14.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
