--- a/lms-frontend/server/package.json
+++ b/lms-frontend/server/package.json
@@ -11,11 +11,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "lms-backend": "file:",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
