--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^8.1.0",
+    "antd": "^5.25.1",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "file-saver": "^2.0.5",
