--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -13,9 +13,11 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@mui/system": "^7.1.0",
     "@mui/x-data-grid": "^8.1.0",
+    "@mui/x-date-pickers": "^8.3.1",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
