--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
+    "lms-frontend": "file:",
     "lucide-react": "^0.508.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
