--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.2.0",
     "jwt-decode": "^4.0.0",
     "lms-frontend": "file:",
     "lucide-react": "^0.508.0",
@@ -32,6 +33,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-select": "^5.10.1",
@@ -43,6 +45,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-i18next": "^7.8.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
